tests/tooling/fixtures/native/recovery/negative/negative_for_parser_missing_init_semicolon.objc3
// Expected diagnostic code(s): O3P104, O3P100.
module NegativeForParserMissingInitSemicolon;

fn main() -> i32 {
  for (let i = 0 i < 3; i = i + 1) {
    let x = i;
  }
  return 0;
}
